# merch-store

server/: pyproject.toml
server/apps/shop/: models.py
server/apps/shop/migrations/: 0001_initial.py
server/project/: settings.py  urls.py
server/project/templates/admin/: base.html
